Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -36,6 +36,7 @@ header.bk-header {
   display: block;
   float: left;
   padding: 9px 5px 0px 0px;
+  width: 25%;
 }
 
 /* COMPANY NAME */
@@ -91,12 +92,11 @@ footer.bk-footer .widget.content {
 .widget.extendednavigation {
     float: right;
     position: relative;
-    max-width: 691px;
+    width: 75%;
     margin: 8px 0 0;
 }
 
 .widget.extendednavigation ul {
-    float: left;
     margin: 0;
     padding: 8px 0;
 }
